fix color contrast

--- a/_sass/foundation/_settings.scss
+++ b/_sass/foundation/_settings.scss
@@ -70,6 +70,7 @@ $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
   primary: #21784a,
+  primary-alt: #278c56,
   secondary: #767676,
   success: #3adb76,
   warning: #ffae00,
